# ROS2-Forklift-Simulation

./: .gitignore  .swp  Dockerfile  Makefile  README.md  build_and_run_gazebo_launch_script.bash  build_and_run_ros2Control_gazebo_launch_script.bash  build_and_run_script.bash  requirements.txt  ros2_pkg_requirements.txt
src/forklift_gym_env/: package.xml  setup.cfg  setup.py
src/forklift_gym_env/forklift_gym_env/: __init__.py  test.py  train.py  train_HER_DDPG.py  train_openai_gym.py  train_sb3.py
src/forklift_gym_env/forklift_gym_env/config/: config.yaml  config_DDPG_forklift_env.yaml  config_DDPG_openai_env.yaml  config_HER_DDPG_forklift_env.yaml  config_SB3_forklift_env.yaml
src/forklift_gym_env/forklift_gym_env/custom_HER/: train_HER_DDPG.py
src/forklift_gym_env/forklift_gym_env/envs/: Forklift_env.py  __init__.py  depth_camera_raw_image_subscriber.py  diff_cont_cmd_vel_unstamped_publisher.py  forklift_env.py  forklift_env_Actions_utils.py  forklift_env_HER.py  forklift_env_Rewards_utils.py  forklift_env_observations_utils.py  forklift_env_sb3_HER.py  forklift_robot_tf_subscriber.py  pause_pyhsics_client.py  reset_simulation_client.py  simulation_controller.py  unpause_pyhsics_client.py  utils.py
src/forklift_gym_env/forklift_gym_env/envs/controller_publishers/: diff_cont_cmd_vel_unstamped_publisher.py  fork_joint_controller_cmd_publisher.py
src/forklift_gym_env/forklift_gym_env/envs/sensor_subscribers/: collision_detection_subscriber.py  depth_camera_raw_image_subscriber.py  forklift_robot_frame_listener.py  forklift_robot_ros_clock_subscriber.py  get_entity_state_client.py
src/forklift_gym_env/forklift_gym_env/gui_controller/: gui_controller.py
src/forklift_gym_env/forklift_gym_env/logging/: logger.py
src/forklift_gym_env/forklift_gym_env/rl/DDPG/: DDPG_Agent.py  DDPG_forklift_env.py  DDPG_openai.py  Replay_Buffer.py  train_DDPG.py  utils.py
src/forklift_gym_env/forklift_gym_env/rl/DDPG_HER/: DDPG_Agent.py  DDPG_Agent2.py  HER_DDPG_forklift_env.py  HER_Replay_Buffer.py  Replay_Buffer.py  Replay_Buffer2.py  test_HER_DDPG_openai.py  train_DDPG.py  train_HER_DDPG.py  train_HER_DDPG_old.py  utils.py
src/forklift_gym_env/forklift_gym_env/rl/sb3_HER/: train_sb3 copy.py  train_sb3.py  utils.py
src/forklift_gym_env/forklift_gym_env/test/: config_pytest_forklift_env.yaml  pytest.ini  run_pytest.py  test_ForkliftEnv.py  test_replay_buffer.py
src/forklift_gym_env/models/pallet/: model.sdf
src/forklift_gym_env/worlds/: collision_detection.world  road.world  robot_lab.world
src/forklift_robot/: README.md  package.xml  setup.cfg  setup.py
src/forklift_robot/config/: my_controllers.yaml
src/forklift_robot/forklift_robot/: camera_raw_image_subscriber.py  depth_camera_raw_image_subscriber.py  diff_cont_cmd_vel_unstamped_publisher.py  fork_controller_publisher.py  lidar_scan_subscriber.py  minimal_subscriber.py  odom_subscriber.py
src/forklift_robot/launch/: demo_launch.launch.py  dev_robot_state_publisher_launch.launch.py  dev_rviz_only_launch.launch.py  gazebo_launch.launch.py  ros2Control_gazebo_launch.launch.py  rviz_launch.launch.py
src/forklift_robot/rviz/: forklift_rviz.rviz  forklift_with_sensors.rviz
src/forklift_robot/urdf/: camera.xacro  depth_camera.xacro  forklift.urdf.xacro  gazebo.xacro  gazebo_colors.xacro  gazebo_gravity_compensation_plugin.xacro  lidar.xacro  ros2_control.xacro  ros_control.xacro  ros_gazebo_collision_detection_plugin.xacro
src/forklift_ros_control/: CMakeLists.txt  package.xml
src/forklift_ros_control/config/: forklift_control.yaml
src/forklift_ros_control/launch/: forklift_control.launch
src/ros_gazebo_plugins/: CMakeLists copy.txt  CMakeLists copyHOOO.txt  CMakeLists.txt  collision_detection.world  package.xml
src/ros_gazebo_plugins/src/: CollisionDetectionPlugin.cc  CollisionDetectionPlugin.hh  ros_collision_detection_plugin.cpp  ros_collision_detection_plugin.hpp
